# parapyro

./: .gitignore  README.md  pyproject.toml
parapyro/: __init__.py  presentation.py
parapyro/backend/: base_backend.py  latex.py  tectonic.py
parapyro/rendering/: defaults.py
parapyro/slides/: object.py  page.py
parapyro/utils/: compiler_utils.py
tests/: test_slide.py
tests/utils/: test_compiler_utils.py
