[tool.poetry]
name = "parapyro"
version = "0.1.0"
description = ""
authors = ["Emanuel Seemann <3380606+seemanne@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
